update lesson 62 HW